pyquest/ql/test/semantic_analysis/invalid/test001.ql
// Reference to unknown identifier in condition
form testForm {
	if (unknownIdentifier) {
		"First Question"
		anotherIdentifier : integer
	}
	"Second Question"
	testIdentifier : boolean
}